RESOLVED FIXED72613
[GTK] plugins/get-url-notify-with-url-that-fails-to-load.html on bots after r100466
https://bugs.webkit.org/show_bug.cgi?id=72613
Summary [GTK] plugins/get-url-notify-with-url-that-fails-to-load.html on bots after r...
Sergio Villar Senin
Reported 2011-11-17 07:58:49 PST
This is the stacktrace: Program terminated with signal 11, Segmentation fault. #0 0x00002b6fa6e01e45 in WebCore::ResourceHandle::platformSetDefersLoading (this=0x3762b20, defersLoading=false) at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:751 751 ASSERT(d->m_soupRequest); Thread 1 (Thread 0x2b6fb457d8e0 (LWP 5596)): #0 0x00002b6fa6e01e45 in WebCore::ResourceHandle::platformSetDefersLoading (this=0x3762b20, defersLoading=false) at ../../Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:751 #1 0x00002b6fa6df78ed in WebCore::ResourceHandle::setDefersLoading (this=0x3762b20, defers=false) at ../../Source/WebCore/platform/network/ResourceHandle.cpp:174 #2 0x00002b6fa6c66977 in WebCore::ResourceLoader::setDefersLoading (this=0x64769c10, defers=false) at ../../Source/WebCore/loader/ResourceLoader.cpp:169 #3 0x00002b6fa6e4f99a in WebCore::PluginStream::destroyStream (this=0x65c5f690) at ../../Source/WebCore/plugins/PluginStream.cpp:301 #4 0x00002b6fa6e4f372 in WebCore::PluginStream::destroyStream (this=0x65c5f690, reason=1) at ../../Source/WebCore/plugins/PluginStream.cpp:234 #5 0x00002b6fa6e504bf in WebCore::PluginStream::didFail (this=0x65c5f690, loader=0x64769c10) at ../../Source/WebCore/plugins/PluginStream.cpp:443 #6 0x00002b6fa6c5cf05 in WebCore::NetscapePlugInStreamLoader::didFail (this=0x64769c10, error=...) at ../../Source/WebCore/loader/NetscapePlugInStreamLoader.cpp:119 #7 0x00002b6fa6c67d3a in WebCore::ResourceLoader::cannotShowURL (this=0x64769c10) at ../../Source/WebCore/loader/ResourceLoader.cpp:480 #8 0x00002b6fa6df7535 in WebCore::ResourceHandle::fireFailure (this=0x3762b20) at ../../Source/WebCore/platform/network/ResourceHandle.cpp:98 #9 0x00002b6fa6df7fa6 in WebCore::Timer<WebCore::ResourceHandle>::fired (this=0x63fa4828) at ../../Source/WebCore/platform/Timer.h:100
Attachments
Patch (3.30 KB, patch)
2011-11-17 09:33 PST, Sergio Villar Senin
mrobinson: review+
Sergio Villar Senin
Comment 1 2011-11-17 08:00:46 PST
Will provide a patch soon. Basically recent changes didn't take into account that not handled URL schemes (like foo://) do not generate valid SoupRequest objects.
Sergio Villar Senin
Comment 2 2011-11-17 09:33:38 PST
Martin Robinson
Comment 3 2011-11-17 09:40:38 PST
Comment on attachment 115605 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=115605&action=review > Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:751 > + // have risen a failure (for example invalid URLs). We cannot Nit: risen -> raised
Sergio Villar Senin
Comment 4 2011-11-17 09:49:44 PST
Note You need to log in before you can comment on or make changes to this bug.