[GTK] plugins/get-url-notify-with-url-that-fails-to-load.html on bots after r100466 https://bugs.webkit.org/show_bug.cgi?id=72613

Reviewed by Martin Robinson.

Source/WebCore:

Do not assume that a SoupRequest always exists, it is not
generated for example when the provided URL is
invalid. ResourceHandle::platformSetDefersLoading was crashing
because of that.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore::ResourceHandle::platformSetDefersLoading):

LayoutTests:

Added a test that times out in WK2.

* platform/gtk-wk2/Skipped: added plugins/get-url-notify-with-url-that-fails-to-load.html

Canonical link: https://commits.webkit.org/89146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100640 268f45cc-cd09-0410-ab3c-d52691b4dbfc